first stage jquery work (so many bugs)

--- a/ProjectConnectFourGame/HTML/connect4game.html
+++ b/ProjectConnectFourGame/HTML/connect4game.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!-- other files -->
-    <link rel="stylesheet" href="..\bootstrap-4.3.1-dist\css\bootstrap.css">
+    <link rel="stylesheet" href="..\..\bootstrap-4.3.1-dist\css\bootstrap.css">
     <link rel="stylesheet" href="..\CSS\connect4game.css">
 
     <!--  -->
@@ -16,8 +16,10 @@
       <h1>Welcome to Connect Four!</h1>
       <h2>The objective of this game is to connect four chips in a row!</h2>
       <h4>Click on a column to drop your chip</h4>
-
+      <h5></h5>
     </div>
+
+
 
     <div class="container" align = "center">
       <table class="board">
@@ -99,7 +101,7 @@
 
     </div>
 
-    <script src="../jquery/jqueryoffline.js" charset="utf-8">
+    <script src="../../jquery/jqueryoffline.js" charset="utf-8">
     </script>
     <script src="../JS/connect4game.js"></script>
 
