added Js-- fading board feature

--- a/ProjectConnectFourGame/HTML/connect4game.html
+++ b/ProjectConnectFourGame/HTML/connect4game.html
@@ -18,8 +18,12 @@
       <h4>Click on a column to drop your chip</h4>
       <h5></h5>
     </div>
+    <script src="../../jquery/jqueryoffline.js" charset="utf-8">
+    </script>
 
-
+<div class="start" align = center>
+  <button type="button" class="btn btn-success">Show/Remove board</button>
+</div>
 
     <div class="container" align = "center">
       <table class="board">
@@ -100,9 +104,9 @@
       </table>
 
     </div>
+    <script src="../JS/connect4anim.js"></script>
 
-    <script src="../../jquery/jqueryoffline.js" charset="utf-8">
-    </script>
+
     <script src="../JS/connect4game.js"></script>
 
   </body>
