--- a/ProjectConnectFourGame/HTML/connect4game.html
+++ b/ProjectConnectFourGame/HTML/connect4game.html
@@ -11,7 +11,8 @@
     <title>Connect Four Game</title>
   </head>
   <body>
-    <div class="container" align = "center">
+    <br>
+    <div class="container jumbotron" align = "center">
 
       <h1>Welcome to Connect Four!</h1>
       <h2>The objective of this game is to connect four chips in a row!</h2>
@@ -20,11 +21,11 @@
     </div>
     <script src="../../jquery/jqueryoffline.js" charset="utf-8">
     </script>
-
+<br>
 <div class="start" align = center>
-  <button type="button" class="btn btn-success">Show/Remove board</button>
+  <button type="button" class="btn btn-success">Show Board</button>
 </div>
-
+<br>
     <div class="container" align = "center">
       <table class="board">
         <tr>
