--- a/ProjectConnectFourGame/HTML/connect4game.html
+++ b/ProjectConnectFourGame/HTML/connect4game.html
@@ -12,13 +12,22 @@
   </head>
   <body>
     <br>
-    <div class="container jumbotron" align = "center">
+    <div class="row">
+
+    <div class="col">
+      
+    </div>
+    <div class="jumbotron col-6" align = "center">
 
       <h1>Welcome to Connect Four!</h1>
       <h2>The objective of this game is to connect four chips in a row!</h2>
       <h4>Click on a column to drop your chip</h4>
       <h5></h5>
     </div>
+    <div class="col">
+
+    </div>
+  </div>
     <script src="../../jquery/jqueryoffline.js" charset="utf-8">
     </script>
 <br>
