some re-arrangment--created helper dir also git ignored it

--- a/ProjectConnectFourGame/HTML/connect4game.html
+++ b/ProjectConnectFourGame/HTML/connect4game.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <!-- other files -->
-    <link rel="stylesheet" href="..\..\bootstrap-4.3.1-dist\css\bootstrap.css">
+    <link rel="stylesheet" href="..\..\helper\bootstrap-4.3.1-dist\css\bootstrap.css">
     <link rel="stylesheet" href="..\CSS\connect4game.css">
 
-    <!--  -->
+    <!--TO DO:
+    CREATE A SLIDER ANIMATION FOR THE BUTTON TO SIMULATE THE DROPPING EFFECT AS A TILE IS CLICKED  -->
 
     <title>Connect Four Game</title>
   </head>
@@ -15,7 +16,7 @@
     <div class="row">
 
     <div class="col">
-      
+
     </div>
     <div class="jumbotron col-6" align = "center">
 
@@ -28,7 +29,7 @@
 
     </div>
   </div>
-    <script src="../../jquery/jqueryoffline.js" charset="utf-8">
+    <script src="../../helper/jquery/jqueryoffline.js" charset="utf-8">
     </script>
 <br>
 <div class="start" align = center>
