--- a/StartupProject/HTML/capstoneWelcome.html
+++ b/StartupProject/HTML/capstoneWelcome.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="..\..\CSS\Capstoneproject.css">
+    <link rel="stylesheet" href="..\CSS\Capstoneproject.css">
     <title>Thank You</title>
   </head>
   <body>
