glass morphism trial

--- a/business_card/public/index.html
+++ b/business_card/public/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <div class="center">
+        <p class="rotate bg-text">Morphism</p>
+    </div>
     <div class="main">
         <div class="card">
             <h1>Is this your Business?</h1>
